# tds-project

./: .env  .gitignore  Dockerfile  api.py  download_md.py  generate_embeddings.py  pyproject.toml  pyproject.toml.backup  render.yaml  requirements.txt  test.py
embeddings/faiss_index/: index.faiss  index.pkl
