[build-system]
requires = ["setuptools>=70.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-gemini-api"
version = "1.0.0"
description = "FastAPI application with Google Gemini and LangChain support"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "numpy==1.24.3",
    "scipy==1.11.4",
    "scikit-learn==1.3.2",
    "langchain==0.1.0",
    "langchain-community==0.0.10",
    "langchain-google-genai==0.0.6",
    "google-generativeai==0.3.2",
    "faiss-cpu==1.7.4",
    "transformers==4.36.0",
    "sentence-transformers==2.2.2",
    "torch==2.1.0",
    "httpx==0.25.2",
    "requests==2.31.0",
]

[tool.setuptools]
packages = []

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"