[build-system]
requires = ["setuptools>=70.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-gemini-api"
version = "1.0.0"
description = "FastAPI application with Google Gemini and LangChain support"
requires-python = ">=3.11,<3.13"

[tool.setuptools]
py-modules = []